--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<h1> Hey. I'm a big heading </h1>
-<p>Yo, im a paragraph bro</p>
-<a href="https://google.com" target="_blank" title="letsgoo">click meeee</a>
+<!DOCTYPE html>
+<html>
+    
+    <head>
+        <title>lol</title>
+    </head>
+    
+    <body>
+        <h1> Hey. I'm a big heading </h1>
+        <p>Yo, im a <b>paragraph</b> <i>bro</i> </p>
+        <a href="https://google.com" target="_blank" title="letsgoo">click meeee</a>
+        <p>My name is: <br>
+            Le miauw
+        </p>
+        <img src="cat.png">
+    </body>
+
+</html>
+
