Added index,images html and favicon

--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html>
-    
-    <head>
-        <title>lol</title>
-        
-    </head>
-    <body>
-        <h1> Hey. I'm a big heading </h1>
-        <p>Yo, im a <b>paragraph</b> <i>bro</i> </p>
-        <a href="https://google.com" target="_blank" title="letsgoo">click meeee</a>
-        <p>My name is: <br>
-            Le miauw
-        </p>
-        <img src="cat.png">
-    </body>
+<head>
+    <!-- tab title -->
+<title>Murkje's Deku Fanpage</title>
+<!-- favicon -->
+<link rel="icon" href="img/deku.jpg">
+</head>
+<body>
+    <!--header element-->
+<header>
+    <img src="img/deku.jpg">
+    <h1>Deku</h1>
+</header>
+<!-- main element -->
+
+<main>
+    <!-- about -->
+<h2>About Deku</h2>
+<p>Deku is an awesome hero with the goal to save everyone with a smile!</p>
+<img src="">
+<p>Deku using his superpower (quirk) One For All!</p>
+<h2>Deku's characteristicts</h2>
+<ol>
+<li>He can power up any part of his body</li>
+<li> He was born quirkless, but got a quirk from his number 1 hero</li>
+<li>He cries a lot</li>
+</ol>
+<!-- friends -->
+<h2>Deku's Friends</h2>
+<p>Deku has a lot of friends, who are also heroes! Click on the links below to read more about them:</p>
+<ul>
+<li><a target=_ href="https://characterprofile.fandom.com/wiki/All_Might">All Might</a></li>
+<li><a target=_ href="https://bokunoheroacademia.fandom.com/wiki/Ochaco_Uraraka">Uraraka</a></li>
+<li><a target=_ href="https://bokunoheroacademia.fandom.com/wiki/Tenya_Iida"></a>Lida</li>
+<li><a target=_ href="https://bokunoheroacademia.fandom.com/wiki/Katsuki_Bakugo">Bakugo</a></li>
+</ul>
+</main>
+<!-- footer element -->
+
+<footer>
+    <p>This site was created by Murkje, during a class from Skillshare! &copy; Mark</p>
+</footer>
+</body>
 
 </html>
-
